--- a/README.Rmd
+++ b/README.Rmd
@@ -38,3 +38,55 @@ d1_idx <- seq_len(d1_L - 3)
   sum()
 ```
 
+# Day 2
+
+## Part 1
+
+```{r}
+d2_sub <- tibble(input = readLines(here::here("data/day02.txt"))) %>% 
+  separate(input, c("direction", "value"), sep = " ", convert = TRUE)
+
+d2_sub %>% 
+  mutate(
+    axis = if_else(
+      direction %in% c("forward", "back"), 
+      "horizontal", 
+      "vertical"
+    ), 
+    sign = if_else(
+      direction %in% c("forward", "down"), 
+      1L, 
+      -1L
+    )
+  ) %>% 
+  group_by(axis) %>% 
+  summarise(position = sum(sign * value), .groups = "drop") %>% 
+  summarise(total = prod(position))
+  
+```
+
+## Part 2
+
+NB. Turns out there are no `back` steps in the input, which is why the instructions make sense. 
+
+```{r}
+d2_sub %>% 
+  count(direction)
+```
+
+```{r}
+d2_sub %>% 
+  mutate(
+    aim = cumsum(
+      ((direction == "down") * value) - ((direction == "up") * value)
+    ), 
+    forward = (direction == "forward")
+  ) %>% 
+  mutate(
+    horizontal = cumsum(forward * value), 
+    depth = cumsum(forward * aim * value)
+  ) %>% 
+  slice_tail(n = 1) %>% 
+  transmute(answer = horizontal * depth)
+```
+
