--- a/README.Rmd
+++ b/README.Rmd
@@ -9,8 +9,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-library(igraph)
-library(tidygraph)
+library(bitops)
 walk(list.files(here::here("R"), full.names = TRUE), source)
 ```
 
@@ -21,16 +20,14 @@ Here's my work on Advent of Code 2021.
 ## Part 1
 
 ```{r}
-d1_sonar <- readLines(here::here("data/day01.txt")) %>% 
-    as.double()
-d1_L <- length(d1_sonar)
-sum(d1_sonar[seq_len(d1_L - 1)] < d1_sonar[seq_len(d1_L - 1) + 1])
+d1_sonar <- scan(here::here("data/day01.txt"))
+sum(diff(d1_sonar) > 0)
 ```
 
 ## Part 2
 
 ```{r}
-d1_idx <- seq_len(d1_L - 3)
+d1_idx <- seq_len(length(d1_sonar) - 3)
 (
   (d1_sonar[d1_idx] + d1_sonar[d1_idx + 1] + d1_sonar[d1_idx + 2]) < 
     (d1_sonar[d1_idx + 1] + d1_sonar[d1_idx + 2] + d1_sonar[d1_idx + 3])
@@ -43,8 +40,12 @@ d1_idx <- seq_len(d1_L - 3)
 ## Part 1
 
 ```{r}
-d2_sub <- tibble(input = readLines(here::here("data/day02.txt"))) %>% 
-  separate(input, c("direction", "value"), sep = " ", convert = TRUE)
+d2_sub <- read_delim(
+  "data/day02.txt", 
+  delim = " ", 
+  col_names = c("direction", "value"), 
+  col_types = cols(col_character(), col_integer())
+)
 
 d2_sub %>% 
   mutate(
@@ -88,5 +89,53 @@ d2_sub %>%
   ) %>% 
   slice_tail(n = 1) %>% 
   transmute(answer = horizontal * depth)
+```
+
+# Day 3
+
+## Part 1
+
+```{r}
+d3_input <- readLines(here::here("data/day03.txt")) %>% 
+  str_split("") %>% 
+  map(as.integer) %>% 
+  reduce(rbind)
+  
+d3_sums <- (colSums(d3_input) > (nrow(d3_input) / 2))
+d3_get_prod <- function(x, y) {
+  map(
+  list(x, y), 
+  ~ .x %>% 
+    as.integer() %>% 
+    as.character() %>% 
+    str_c(collapse = "") %>% 
+    strtoi(base = 2L)
+  ) %>% 
+  reduce(prod)
+}
+d3_get_prod(d3_sums, !d3_sums)
+```
+
+## Part 2
+
+```{r}
+d3_oxygen <- d3_input
+for (j in seq_len(ncol(d3_input))) {
+  most_common <- as.integer(sum(d3_oxygen[, j]) >= (nrow(d3_oxygen) / 2))
+  d3_oxygen <- d3_oxygen[d3_oxygen[, j] == most_common, ]
+  if (is.null(dim(d3_oxygen))) {
+    break
+  }
+}
+
+d3_co2 <- d3_input
+for (j in seq_len(ncol(d3_input))) {
+  least_common <- as.integer(!(sum(d3_co2[, j]) >= (nrow(d3_co2) / 2)))
+  d3_co2 <- d3_co2[d3_co2[, j] == least_common, ]
+  if (is.null(dim(d3_co2))) {
+    break
+  }
+}
+d3_get_prod(d3_oxygen, d3_co2)
 ```
 
