--- a/README.Rmd
+++ b/README.Rmd
@@ -191,3 +191,54 @@ d4_scores[which.min(d4_win_times)]
 d4_scores[which.max(d4_win_times)]
 ```
 
+# Day 5
+
+## Part 1
+
+```{r}
+d5_input <- tibble(
+  raw = readLines(here::here("data/day05.txt"))
+) %>% 
+  separate(
+    raw, 
+    into = c("x1", "y1", "x2", "y2"), 
+    convert = TRUE
+  ) %>% 
+  rowid_to_column() %>% 
+  mutate(
+    direction = case_when(
+      x1 == x2 ~ "vertical", 
+      y1 == y2 ~ "horizontal", 
+      TRUE     ~ "other"
+    )
+  ) %>% 
+  mutate(
+    all_pts = pmap(
+      ., 
+      ~ str_c(seq(..2, ..4), ",", seq(..3, ..5))
+    )
+  )
+```
+
+
+```{r}
+d5_input %>% 
+  filter(direction != "other") %>% 
+  select(rowid, all_pts) %>% 
+  unnest(all_pts) %>% 
+  group_by(all_pts) %>% 
+  summarise(pt_count = n_distinct(rowid)) %>% 
+  count(pt_count > 1)
+```
+
+## Part 2
+
+```{r}
+d5_input %>% 
+  select(rowid, all_pts) %>% 
+  unnest(all_pts) %>% 
+  group_by(all_pts) %>% 
+  summarise(pt_count = n_distinct(rowid)) %>% 
+  count(pt_count > 1)
+```
+
