--- a/README.Rmd
+++ b/README.Rmd
@@ -305,12 +305,7 @@ d6_sim_fish(d6_counts, N = 256) %>%
 
 ```{r}
 d7_input <- scan(here::here("data/day07.txt"), sep = ",")
-d7_all_poss_dist <- seq(min(d7_input), max(d7_input))
-d7_all_abs_dist <- map_dbl(
-  d7_all_poss_dist, 
-  ~ sum(abs(d7_input - .x))
-)
-d7_all_abs_dist[which.min(d7_all_abs_dist)]
+sum(abs(d7_input - median(d7_input)))
 ```
 
 ## Part 2
@@ -319,10 +314,64 @@ d7_all_abs_dist[which.min(d7_all_abs_dist)]
 d7_increase_fuel_cost <- function(n) {
   (n * (n + 1)) / 2
 }
+d7_all_poss_dist <- seq(min(d7_input), max(d7_input))
 d7_fuel_cost <- map_dbl(
   d7_all_poss_dist, 
   ~ sum(d7_increase_fuel_cost(abs(d7_input - .x)))
 )
 d7_fuel_cost[which.min(d7_fuel_cost)]
+```
+
+# Day 8
+
+## Part 1
+
+```{r}
+d8_input <- read_delim(
+  here::here("data/day08.txt"),
+  delim = " | ",
+  col_names = c("signals", "output"),
+  col_types = cols(.default = col_character())
+) %>%
+  mutate(across(.fns = str_trim))
+
+d8_input %>% 
+  mutate(
+    counts = map(
+      output, 
+      ~ str_split(.x, " ") %>% 
+        pluck(1) %>% 
+        map_int(nchar)
+    )
+  ) %>% 
+  mutate(
+    total = map_int(
+      counts, 
+      ~ sum(.x %in% c(2L, 4L, 3L, 7L))
+    )
+  ) %>% 
+  summarise(answer = sum(total))
+```
+
+## Part 2
+
+Easier to wrap the required code in a function. 
+
+```{r}
+parse_display
+```
+
+
+```{r}
+d8_input %>%
+  mutate(
+    across(
+      .fns = ~ str_split(.x, " ") %>%
+        map(str_split, "") %>%
+        map(map, sort)
+    )
+  ) %>%
+  mutate(parsed = map2_int(signals, output, parse_display)) %>%
+  summarise(answer = sum(parsed))
 ```
 
